# TDDTutorial

./: .gitignore  README.md  pyproject.toml
db/dynamodb/: docker-compose.yml
db/mongodb/: docker-compose.yml
db/mysql/: docker-compose.yml
db/postgres/: docker-compose.yml
ncaa_gymnastics/app/: __init__.py  nqs.py
ncaa_gymnastics/data/: scores.json
ncaa_gymnastics/tests/: test_nqs.py
